--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -118,7 +118,11 @@ reading：
 
 3. **concealment,obliqueness,silence,outright lying-all help to keep Nemesis at bay;all help us abide too-large helping of reality.** 
 
-4. our  primate ancestors evolved so they could engage in the **trickery**,manipulation,**skullduggry**,and **sleight** of hand needed to live in larger social groups.     
+   遮遮掩掩，拐弯抹角，沉默，彻底的欺骗，这些行为都可以帮助人们免受他人报复，或者帮助人们接受他们并不喜欢的大部分事实。
+
+4. our  primate ancestors evolved so they could engage in the **trickery**,manipulation,**skullduggry**,and **sleight** of hand needed to live in larger social groups.   
+
+   人类的的祖先，为了自己在更大的社群中活下去，就已经进化到会欺骗、控制、使诈、和玩弄计谋。  
 
 5. But it would be destabilizing indeed to be stripped of the half-truths and **delusions** on which social life depends. 
 
