--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -2,11 +2,7 @@
 title: 英语复习
 ---
 
-:yum::accept:
-
 # unit one(mickey's team)
-
-
 
 words:
 
@@ -32,30 +28,24 @@ reading:
 
   文章主要内容：母亲酗酒，父亲爱打棒球，父亲39岁去世，我因此酗酒，麻痹自己，后来作者因为肝脏问题作者进入治疗中心，后来作者戒酒成功
 
-
-
-
-
 - addiction(成瘾)
-
-
 
 key element of addiction：
 
 1. 耐受量(tolerance)：
 
-  A person is drawn to(被吸引) addictive behavior or to a substance because of the way they affect his or her emotions.Tolrance means that over time ,more and more intense are substance is required to produce the  desired effect until the situation becomes hazardous.
+  A person is drawn to(被吸引) addictive behavior or to a substance because of the way they affect his or her emotions. Tolerance means that over time ,more and more intense are substance is required to produce the  desired effect until the situation becomes hazardous.
 
   一个人对某种行为或事物上瘾取决于这种行为或事物影响他的情感的方式。人为地获取某种情形下的理想结果，越来越多地要求做出某种行为或使用某种物质，直至出现危险状况。
 
 2. 戒断反应(withdrawal)
 
-  withdrawal(戒断反应) means that an individual has a very painful physial and/or emotional reaction when the substance or behavior is stopped.
+  withdrawal(戒断反应) means that an individual has a very painful physical and/or emotional reaction when the substance or behavior is stopped.
 
-Factors That Influence Addiction:
+Factors That Influence Addiction
 
 - 遗传(heredity)
-  This is not to say that heredity alone is suffcient to cause an addiction.*but that the specific nature of the addiction may well be influenced by genetics*.
+  This is not to say that heredity alone is sufficient to cause an addiction. *but that the specific nature of the addiction may well be influenced by genetics*.
   并不意味着仅仅遗传本身就能引起上瘾，而是说基因可能会影响成瘾的种类 。
 - 创伤(Trauma)
 - 羞耻感(shame)
@@ -63,7 +53,7 @@ Factors That Influence Addiction:
 
 3. 康复(Recovery)
 
-  The emotional issues that helped to cause the addction initially have to be addressed,and the demage to the person's life caused by the addiction must be gradually healed as much as possible.
+  The emotional issues that helped to cause the addiction initially have to be addressed,and the damage to the person's life caused by the addiction must be gradually healed as much as possible.
 
 # unit two(lies and truth)
 
@@ -71,25 +61,25 @@ words:
 
 - fidget:坐立不安
 - spot deception:发现欺骗
-- betrayaloozes:背叛
+- betrayal oozes:背叛
 - fingertip：手指头，指尖
 - avert：避免
 - gazes：注视，目光
 - squirm:蠕动，局促不安
 - stutter:口吃，结结巴巴
 - stereotype:刻板印象
-- dead giveaway:something that reveals you hava lied or done something wrong(*彻底揭露谎言*)
+- dead giveaway: something that reveals you have lied or done something wrong(*彻底揭露谎言*)
 - innate:先天，天赋
 - sniff out:嗅出
 - flipped a coin:抛硬币
 - polygraph：**测谎仪**
 - respiration rate：呼吸频率
 - electrodermal skin response:皮肤电阻反应 
-- mailcious:恶意的
+- malicious:恶意的
 - keep  Nemesis at bay:避免报复
 - trickery:诡计
 - skullduggery:欺骗，使诈
-- sleight of hand:the use of tricks and lies to achieve something.
+- sleight of hand: the use of tricks and lies to achieve something.
 - cunning:巧妙的
 - empirical support:实验证据
 - delusion:虚幻，幻想
@@ -104,17 +94,15 @@ words:
 - obliqueness:拐弯抹角
 - outright lying：彻底的说谎
 
-
-
 reading：
 
 - Looking for the Lie
 
-1. anyone could spot deception by paying  close enough attention,since the liar,he wrote,"chatters with his fingertips;**betrayaloozes out of him at every pore."**
+1. anyone could spot deception by paying  close enough attention,since the liar,he wrote,"chatters with his fingertips;**betrayal oozes out of him at every pore."**
 
    每个动作都背叛了它
 
-2. would be less puzzling if we had more reason to imagine that it was true.what's is ture,instead，is that there are as many ways to lie as there are liars;there's no such thing as a **dead giveaway.**                                                       
+2. would be less puzzling if we had more reason to imagine that it was true. what's is true,instead，is that there are as many ways to lie as there are liars;there's no such thing as a **dead giveaway.**                                                       
 
    假设我们用更多的理性去假想一下这种想法的真实性，就会对这种看法竟能延续这么长时间感到迷惑，恰恰相反，事实是有多少人说谎，就有多少说谎的方法，没有什么办法可以完全判断人们是否在撒谎。(*可以注意到，作者在下文立马给出了论据*)
 
@@ -122,7 +110,7 @@ reading：
 
    遮遮掩掩，拐弯抹角，沉默，彻底的欺骗，这些行为都可以帮助人们免受他人报复，或者帮助人们接受他们并不喜欢的大部分事实。
 
-4. our  primate ancestors evolved so they could engage in the **trickery**,manipulation,**skullduggry**,and **sleight** of hand needed to live in larger social groups.   
+4. our  primate ancestors evolved so they could engage in the **trickery**,manipulation,**skullduggery**,and **sleight** of hand needed to live in larger social groups.   
 
    人类的的祖先，为了自己在更大的社群中活下去，就已经进化到会欺骗、控制、使诈、和玩弄计谋。  
 
@@ -140,7 +128,7 @@ SUM：
 
   
 
-  We must proceed as though,in principle,we can find things out--even if we can't.The alternativeis unacceptable.
+  We must proceed as though,in principle,we can find things out--even if we can't. The alternatives unacceptable.
 
   
 
