--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -134,6 +134,40 @@ SUM：
 
   SUM:借邻居小孩和我的赌约的故事，引出下文，对于真象，我们应该不断追求它，即使我们没有这个能力，止步不前也是不可取的。
 
+# unit five (In Business,Size Matters)
+
+words:
+
+- trashed：completely destroyed
+
+- posh: elegant,expensive
+- mindful:在意
+- benevolence：大方，仁慈
+- crusade:运动，斗争
+- steer clear of:绕开，避开
+- lobby:游说
+- premium(s)：奖金
+- insipid:乏味的，索然无味的
+- coffee snobs：伪咖啡迷
+- blanch at: suddenly become "pale"(苍白) because you are shocked
+- flopped:倒闭
+
+reading:
+
+1. STARBUCKS knows it cannot ignore its critics..."We have to be extremely mindful of the public's view of things,Thus far, we've done a pretty good job."
+
+2. The reason(why we've done a pretty good job),argues Mr.schultz,is that the company has retained **a "passion" for coffee a "sense of humanity**."
+
+   后面都是论据
+
+3. three point：
+
+   - The first is that ,thanks to Starbucks,today's American are no longer condemned to drink the insipid,over-percolated brew that their parents endured.
+   - because Starbucks has created a mass taste for good coffee,samll,family-owned coffee houses have also prospered.
+   - The most important point ,however,is that Mr.Schultz's Starbucks cultivates a relationship with its customers.
+
+4. The key is that each Starbucks coffee house should remain "a third place",between home and work.
+
 
 
 
