--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -139,9 +139,12 @@ SUM：
 words:
 
 - trashed：completely destroyed
-
 - posh: elegant,expensive
-- mindful:在意
+- mindful:留心的，记住的
+- retain:保留...在心中
+- surpass:远远超出
+- promote:推销
+- prosper:成功，兴隆
 - benevolence：大方，仁慈
 - crusade:运动，斗争
 - steer clear of:绕开，避开
@@ -149,10 +152,33 @@ words:
 - premium(s)：奖金
 - insipid:乏味的，索然无味的
 - coffee snobs：伪咖啡迷
-- blanch at: suddenly become "pale"(苍白) because you are shocked
+- blanch at: suddenly become "pale"(苍白) because you are shocked被...惊吓
+- scrape together:东拼西凑
+- strike down:驳回，不予生效
 - flopped:倒闭
+- exploit:剥削
+- argualy:可以说
+- inventory:库存
+- torn  asunder:损害，撕裂
+- desert ... for...:放弃...而前往...
+- merchant：商店
+- editorial:社论
+- blast：criticize strongly
+- take on:接受
+- negotiate:谈判，商议
+- infuriated：激怒了
+- irresistible:不可抗拒的
+- struck down:否定
+
+
+
+
 
 reading:
+
+
+
+- Starbucks
 
 1. STARBUCKS knows it cannot ignore its critics..."We have to be extremely mindful of the public's view of things,Thus far, we've done a pretty good job."
 
@@ -167,6 +193,22 @@ reading:
    - The most important point ,however,is that Mr.Schultz's Starbucks cultivates a relationship with its customers.
 
 4. The key is that each Starbucks coffee house should remain "a third place",between home and work.
+
+
+
+
+
+- Wal-Mart
+
+1. The company may not appreciate the honor,but its place in the political debate reflects its revolutionary effect on the American economy.
+
+   沃尔玛或许不太重视名誉，但是他在政治激辩中的地位反应了他对美国经济的巨大影响力。
+
+2. Wal-Mart's success has brought pain to others
+
+3. Wal-Mart is under attack for paying too little,providing benefits that are too small.
+
+4. Wal-Mart's decline:partly because of problems with its international bussiness and partly bacause competitors are getting better
 
 
 
