--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -212,9 +212,50 @@ reading:
 
 
 
+# unit six
+
+words:
+
+- aerial:天线
+- ammunition:弹药，军火
+- battalion:军营；军队；部队
+- casualty:伤亡人员
+- civilian:民用的，百姓的
+- convoy:护送;护卫
+- dreadful:可怕的，糟糕的；令人不愉快的
+- galling:使烦恼的，使义愤的
+- sparse：稀疏的，稀少的
+- shrapnel:弹片
+- enlisted personnel:应征入伍队员
+- get one's hands dirty:亲自动手
+- patriarchal society:父权社会
 
 
 
+
+
+# unit eight
+
+- affluent:富裕的
+- caste:社会地位
+- concerted:联合的，协定的
+- dramatic:突然引人注目的
+- eradication:消灭，根除
+- fanciful:异想天开的
+- feasible:可行的
+- flophouse:廉价的低级住所或旅馆
+- makeshift:权宜之计；临时措施
+- monitore:监控；监督
+- impoverished:贫困的
+- infrastructure:基础措施
+- inhibit:阻碍
+- offset:抵消；弥补
+- slump:衰退；消沉
+- spur:促进因素；推动
+- undertake:从事；承担
+- wane:减弱；减小
+- saddled with:背上...包袱；负担着...
+- zero in on:把注意力或焦点集中在(某事)上，集中注意力于
 
 
 
