--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -7,16 +7,16 @@ title: 英语复习
 words:
 
 - 压力源：Stressor
-- 创伤：trauma
+- 创伤：**trauma**
 - 有争议的：controversial
 - 清醒的：sober
 - 毁灭：devastate
 - 用磁带记：tape
-- 遗传病：hereditary disease
+- 遗传病：**hereditary** disease
 - 不变地：invariably
 - 螺旋式上升：spiral upwards
 - 解决：address the issue
-- 要求高的，苛刻的：demanding
+- **要求高的，苛刻的：demanding**
 - 酗酒者：alcoholic
 - 最初：in the first place
 - 达到：measure up to
@@ -59,40 +59,43 @@ Factors That Influence Addiction
 
 words:
 
-- fidget:坐立不安
+- **fidget:坐立不安**
 - spot deception:发现欺骗
-- betrayal oozes:背叛
+- betrayal:背叛
+- ooze:动词凸显，洋溢(特性或者特点)
 - fingertip：手指头，指尖
 - avert：避免
 - gazes：注视，目光
-- squirm:蠕动，局促不安
-- stutter:口吃，结结巴巴
+- **squirm:蠕动，局促不安**
+- **stutter:口吃，结结巴巴**
 - stereotype:刻板印象
-- dead giveaway: something that reveals you have lied or done something wrong(*彻底揭露谎言*)
+- **dead giveaway**: something that reveals you have lied or done something wrong(***彻底揭露谎言***)
 - innate:先天，天赋
 - sniff out:嗅出
 - flipped a coin:抛硬币
-- polygraph：**测谎仪**
+- **polygraph**：**测谎仪**
 - respiration rate：呼吸频率
 - electrodermal skin response:皮肤电阻反应 
 - malicious:恶意的
 - keep  Nemesis at bay:避免报复
 - trickery:诡计
-- skullduggery:欺骗，使诈
-- sleight of hand: the use of tricks and lies to achieve something.
+- **skullduggery**:欺骗，使诈
+- sleight of hand: the use of tricks and lies to achieve something.(耍花招)
 - cunning:巧妙的
 - empirical support:实验证据
-- delusion:虚幻，幻想
+- **delusion:虚幻，幻想**
 - foolproof:完美的
-- plagued by uncertainty:充满不确定性
-- bucks:美元
+- plague:使痛苦；造成麻烦
+- buck:美元
 - insurmountable：难以克服的，无法逾越的
-- elusive：难以捉摸
-- stumbled on:偶然
+- **elusive：难以捉摸**
+- **stumbled on:偶然**
 - regardless of:不管
 - concealment：隐瞒
-- obliqueness:拐弯抹角
-- outright lying：彻底的说谎
+- **obliqueness:拐弯抹角**
+- **outright:彻底的**
+- quest:追求，探索，寻求
+- scratch:给...挠痒
 
 reading：
 
@@ -100,7 +103,7 @@ reading：
 
 1. anyone could spot deception by paying  close enough attention,since the liar,he wrote,"chatters with his fingertips;**betrayal oozes out of him at every pore."**
 
-   每个动作都背叛了它
+   他身上的每一个毛孔都背叛了他
 
 2. would be less puzzling if we had more reason to imagine that it was true. what's is true,instead，is that there are as many ways to lie as there are liars;there's no such thing as a **dead giveaway.**                                                       
 
@@ -138,7 +141,7 @@ SUM：
 
 words:
 
-- trashed：completely destroyed
+- trashed：completely destroyed(彻底被毁的)
 - posh: elegant,expensive
 - mindful:留心的，记住的
 - retain:保留...在心中
@@ -163,11 +166,11 @@ words:
 - desert ... for...:放弃...而前往...
 - merchant：商店
 - editorial:社论
-- blast：criticize strongly
+- blast：criticize strongly(抨击)
 - take on:接受
 - negotiate:谈判，商议
-- infuriated：激怒了
-- irresistible:不可抗拒的
+- **infuriate：激怒**
+- **irresistible:不可抗拒的**
 - struck down:否定
 - envisage:设想，展望
 
