--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -251,7 +251,7 @@ words:
 - feasible:可行的
 - flophouse:廉价的低级住所或旅馆
 - makeshift:权宜之计；临时措施
-- monitore:监控；监督
+- monitor:监控；监督
 - impoverished:贫困的
 - infrastructure:基础措施
 - inhibit:阻碍
@@ -262,6 +262,35 @@ words:
 - wane:减弱；减小
 - saddled with:背上...包袱；负担着...
 - zero in on:把注意力或焦点集中在(某事)上，集中注意力于
+- poverty trap:贫困陷阱
 
 
+
+reading:
+
+A:can extreme poverty be eliminated?
+
+1. Culture *was once thought* to be the deciding factor: religious  divisions and **taboos**,caste system,a lack of entrepreneurship,gender inequalities.Such theories have waned as societies of an **everwidening range of** religions and cultures have achieved relative prosperity.Moreover,certain supposedly unchangeable aspects of culture(such as **fertility choices** and gender and **caste roles**) do in fact change,often dramatically,as societies become urban and develop economically.
+
+   文化*曾被认为*是决定性因素：宗教分歧和**禁忌**、等级制度、缺乏企业家精神，性别歧视等。这种理论随着**空前多元**的宗教和文化在社会中的相对繁荣而渐渐消失。此外，随着城市化和经济发展，一些本以为不会发生改变的文化(比如**生育与否**以及性别和**种姓制度**的作用)实际上发生了翻天覆地的变化。
+
+2. most recently,commentators have zeroed in on "poor governance,"or corruption.They argue that extreme poverty persists because governments fail to open up their  markets,provide  public services,and eliminate bribe taking.
+
+   最近，评论员们把目光聚焦到了"管理不善"或者腐败上。他们认为因政府不能开放市场、提供公共服务和制止收受贿赂，极端贫困的现象才会持续存在。(后文指出实际上发达国家比贫困国家更腐败)
+
+3. A second common misunderstanding concerns the       extent to which corruption is likely to eat up the donated money.Some foreign aid in the past has indeed ended up this way.(后面是作者对这种观点的批判)
+
+4. If rich  nations fail to make these investments,they will face famine epidemics,regional conflicts,and the spread of terrorist havens...
+
+SUM：作者通过批评批判几种观点，表明自己的目的:要钱
+
+
+
+B:Makeing Ends Meet(维持生计)
+
+1. "There are no secret economies that nourish the poor,"....
+
+2. comclusion:
+
+   Even for a worker holding two jobs,wages are too low, housing costs too high,for minimally decent survival in the life of America's working poor.
 
