--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -160,7 +160,7 @@ words:
 - strike down:驳回，不予生效
 - flopped:倒闭
 - exploit:剥削
-- argualy:可以说
+- arguably:可以说，可争论的
 - inventory:库存
 - torn  asunder:损害，撕裂
 - desert ... for...:放弃...而前往...
