--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -298,5 +298,5 @@ B:Makeing Ends Meet(维持生计)
 
 eassy question:
 
-For starbucks,one of the reason is company innovations and demand for the product: starbucks have 35 million customers and its coffee bars have increased interest in taste of good coffee.another reason is that starbucks have great benefit packages for employees. For Wal-Mart,it not only has introduced innovations in  managing inventory and shipping good but also has ability to charge less for a  wide variety of goods.Besides,Wal-Mart has more shoppers than any politician has voters,and its prices irresistible.
+For starbucks,one of the reason is company innovations and demand for the product: starbucks have 35 million customers and its coffee bars have increased interest in taste of good coffee.another reason is that starbucks have great benefit packages for employees，As Mr.schultz said the reason why we’ve done a pretty good job is that the company has retained **a “passion” for coffee a “sense of humanity**.”. For Wal-Mart,it not only has introduced innovations in  managing inventory and shipping good but also has ability to charge less for a  wide variety of goods.Besides,Wal-Mart has more shoppers than any politician has voters,and its prices irresistible.
 
