--- a/_posts/2020-11-2-英语一经验.md
+++ b/_posts/2020-11-2-英语一经验.md
@@ -20,9 +20,9 @@ author: 南夕
 
 - 下一个重点——大小作文，这个的话需要花些功夫，大致的思路就是
 
-  https://zhuanlan.zhihu.com/p/150864434?utm_source=wechat_session&utm_medium=social&utm_oi=744936113650548736&utm_campaign=shareopn  
+<center>https://zhuanlan.zhihu.com/p/150864434?utm_source=wechat_session&utm_medium=social&utm_oi=744936113650548736&utm_campaign=shareopn </center>
 
-自己买两本作文书，我小作文背的是王江涛的，挑着不同的背几篇，大作文按主题总结，开头描叙图画，中间就是自己总结的模板（多找找摘抄一些相关的素材）结尾我是直接固定死了，就是自己总结出的万能式结尾。建议自己多花点时间总结出属于自己的模板，然后最后一个月内把他们背好，这样考试就不会慌了。
+​     自己买两本作文书，我小作文背的是王江涛的，挑着不同的背几篇，大作文按主题总结，开头描叙图画，中间就是自己总结的模板（多找找摘抄一些相关的素材）结尾我是直接固定死了，就是自己总结出的万能式结尾。建议自己多花点时间总结出属于自己的模板，然后最后一个月内把他们背好，这样考试就不会慌了。
 
 - 完型填空就没啥好讲的了，我是直接上手做真题的，有人说完型难，分值低，上去就全选一个。其实完型不难，你如果前面阅读真弄懂了，完型做做真题就会发现很简单，因为它主要也是考文章的单词和逻辑。千万别放弃它，我历年真题完型基本都在8分以上。
 
