--- a/_posts/2020-11-2-数据结构与算法.md
+++ b/_posts/2020-11-2-数据结构与算法.md
@@ -12,9 +12,11 @@ tags:
 author: 张朝晖
 ---
 
+# <center>算法四笔记</center>
 
+## 一.输入与输出
 
-
+<center>![image-20210307185825505](C:\Users\zhaohuizhang\AppData\Roaming\Typora\typora-user-images\image-20210307185825505.png)</center>
 
 
 
