--- a/_posts/2020-11-2-数据结构与算法.md
+++ b/_posts/2020-11-2-数据结构与算法.md
@@ -35,6 +35,34 @@ author: 张朝晖
 
 RandomSeq=>标准输入=>标准输出=>Average
 
+## 二.背包&队列&栈
+
+### 2.1 背包（Bag）
+
+​    背包是一种不支持从中删除元素的集合数据类型
+
+- 作用：收集元素并迭代遍历所有收集到的元素，迭代的顺序不确定且与用例无关
+
+### 2.2 先进先出队列（FIFO queue）
+
+- 作用：在用集合保存元素时同时保持它们的相对顺序，即入列顺序和出列顺序相同
+
+### 2.3栈（LIFO）
+
+举个例子：点击一个链接，浏览器会弹出一个新界面并将它压入一个栈，当你点击回退时，上一个界面从栈里弹出
+
+- 当用例使用foreach语句迭代遍历栈中的元素时，元素的处理顺序于他被压入栈的时间正好相反。在应用程序中使用栈迭代器可以在保存集合的同时颠倒它们的相对顺序。
+
+## 三.容器
+
+### 3.1链表（linked list）
+
+链表将每个对象存放在单独的链接(link)中，每个链接中还存放着序列中下个链接的引用
+
+为什么要使用列表？
+
+尽可能减少在列表中间插入或删除元素的开销
+
 
 
 
