--- a/_posts/2020-11-2-数据结构与算法.md
+++ b/_posts/2020-11-2-数据结构与算法.md
@@ -20,18 +20,18 @@ author: 张朝晖
 
 - 重定向：%java RandomSeq 1000 100.0 200.0>data.txt
 
-![image-20210307200021120](C:\Users\zhaohuizhang\AppData\Roaming\Typora\typora-user-images\image-20210307200021120.png)
+![image-20210307200021120](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314102627.png)
 
  输入被写入一个data.txt的文件
 
-![image-20210307195840729](C:\Users\zhaohuizhang\AppData\Roaming\Typora\typora-user-images\image-20210307195840729.png)
+![image-20210307195840729](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314102601.png)
 
 
 ​        用data.txt中的数据 作为输入，求其平均值   
 
 - 管道：将一个程序的输出重定向为另一个程序的输入叫做管道
 
-  <img src="C:\Users\zhaohuizhang\AppData\Roaming\Typora\typora-user-images\image-20210307210837943.png" alt="image-20210307210837943" style="zoom: 80%;" />
+  <img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314102914.png" alt="image-20210307210837943" style="zoom:80%;" />
 
 RandomSeq=>标准输入=>标准输出=>Average
 
