--- a/_posts/2020-11-2-数据结构与算法.md
+++ b/_posts/2020-11-2-数据结构与算法.md
@@ -22,6 +22,8 @@ author: 张朝晖
 
 ![image-20210307200021120](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314102627.png)
 
+### <div align="center"><img src=“https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314102627.png”,width=“50%” height=“” alt=“” /> </div>
+
  输入被写入一个data.txt的文件
 
 ![image-20210307195840729](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314102601.png)
