--- a/_posts/2020-11-2-DCS界面.md
+++ b/_posts/2020-11-2-DCS界面.md
@@ -152,7 +152,7 @@ if (!blLegalNumber) //表示优化计算是否成功的布尔量
         }
 ```
 
-​     
+​    <center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314110428.png"/></center>
 
 
 
