--- a/_posts/2020-11-2-数据结构与算法.md
+++ b/_posts/2020-11-2-数据结构与算法.md
@@ -20,18 +20,20 @@ author: 张朝晖
 
 - 重定向：%java RandomSeq 1000 100.0 200.0>data.txt
 
-![image-20210307200021120](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314102627.png)
+
+
+<center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314190144.png"/></center>
 
  输入被写入一个data.txt的文件
 
-<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314102601.png" alt="image-20210307195840729"  />
+<center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314102601.png" alt="image-20210307195840729"  /></center>
 
 
 ​        用data.txt中的数据 作为输入，求其平均值   
 
 - 管道：将一个程序的输出重定向为另一个程序的输入叫做管道
 
-  <img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314102914.png" alt="image-20210307210837943" style="zoom:80%;" />
+  <center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314102914.png" alt="image-20210307210837943" style="zoom:80%;" /></center>
 
 RandomSeq=>标准输入=>标准输出=>Average
 
@@ -55,7 +57,7 @@ RandomSeq=>标准输入=>标准输出=>Average
 
 ## 三.容器
 
-### 3.1链表（linked list）
+### 3.1 链表（linked list）
 
 链表将每个对象存放在单独的链接(link)中，每个链接中还存放着序列中下个链接的引用
 
@@ -64,5 +66,26 @@ RandomSeq=>标准输入=>标准输出=>Average
 尽可能减少在列表中间插入或删除元素的开销
 
 
+### 3.2 散列表（HashMap)
+#### 3.2.1 什么是散列表？
+将*键作为数组的索引*而数组中键i处存储的就是它对应的值，这样我们就能快速访问任意键的值！
 
+#### 3.2.2 如何将键转化为数组的索引？（关键问题一）
 
+利用哈希函数，对于每种类型的键我们都需要与之对应的哈希函数，选择哈希函数的原则：易于计算并且能够均匀分布所有的键。
+
+#### 3.2.3 散列表的优缺点
+
+使用散列表，可以实现在一般应用中拥有常数级别的查找和插入操作的符号表；散列表的核心问题：处理碰撞冲突——-我们想它不同键对应不同的索引值，但是事实是我们必须面对不同的键都会散列到相同的索引值的情况（在时间和空间的权衡下所产生的结果）
+
+#### 3.3.4 HashCode()
+
+HashCode()方法返回一个32比特整数；如果a.equals(b)方法返回True，那么HashCode(a)的返回值必然和HashCode(b)相等，反推不一定。
+
+- 将HashCode()的返回值转化为数组索引
+- 对于任意对象X，可调用X.hashCode()并认为有均等的机会 得到2^32个不同整数中的任意一个32位整数值，在java中，所有数据类型都继承hashCode()方法。
+- 软缓存：如果散列值的计算很耗时(也就意味着每算一次都很耗时，最好算完之后后面不要再算了，用空间换时间！)，我们可以用一个hash变量来保存它的HashCode()的返回值，这样我们算完一次 返回值→散列值之后，以后再次调用HashCode()就不用再次计算。
+
+#### 3.3.5碰撞处理（关键问题二）
+
+- 拉链法：将大小为M的数组中的每一个元素指向一条链表，每个结点都存储了散列值为该元素索引的键值对，发生冲突的元素都被都被存储在链表中，我们通过选择足够大的M(链表的平均长度为N/M)，使链表尽可能短以便我们查找（空间换时间）。
