--- a/_posts/2021-1-15-计算机网络.md
+++ b/_posts/2021-1-15-计算机网络.md
@@ -2,15 +2,39 @@
 date: 2020-11-02 16:10:40
 layout: post
 title: 计算机网络
-author: 张朝晖
+author: 
 ---
 
 
 
+## 应用层
 
 
 
+## 一.应用层
 
+#### 1.1两个经典的体系结构
 
+- 客户——服务器体系结构：有一个总是打开的主机称为服务器，它服务于来自许多其它称为客户的主机的请求，在这个体系之中，客户之间不直接通信，另一个特征是该服务器具有固定的、周知的地址。需要配备大量主机的数据中心。
 
-1111111111
+  判断客户和服务器的原则：在会话开始时发起与其他进程的联系的进程被标识为客户，在会话开始时等待被联系的进程是服务器。
+
+- P2P体系结构：应用程序在间断连接的主机对之间使用直接通信，这些主机对被称为对等方。在一个P2P文件共享应用中，尽管每个对等方都由于请求文件而产生负载，但是每个对等方通过向其他对等方分发文件也为系统增加服务能力。目前P2P应用由于高度非集中式结构，面临安全性、性能和可靠性等挑战。
+
+  判断客户和服务器的原则：在P2P文件共享之中，当对等方A请求对等方B发送一个特定的文件时，在这个特定的通信会话中对等     方A是客户，B是服务器。
+
+​       
+
+#### 1.2 进程与计算机网络之间的接口
+
+当一个进程向另外一个主机的进程发送报文时，应用程序将报文推进套接字进入运输层之中，运输层协议负责将该套接字的报文取出 ，当报文到达目的主机，它通过接受进程的门（套接字）传递，然后接受接受报文进行处理。
+
+套接字是同一台主机内应用层与运输层之间的接口。由于套接字是建立网络应用程序的可编程接口，因此套接字又被称为应用程序与网络之间的应用程序编程接口（API）
+
+#### 1.3应用程序服务要求（对运输层协议）
+
+- 可靠的数据传输：当一个运输层协议提供这种服务时，发送进程只要将数据传送进套接字，就可以完全相信该数据能够无差错的到达接收进程。
+- 吞吐量：发送进程能够向接收进程交付比特的速率，当一个运输层协议提供这种服务时，，应用程序能够请求r比特/秒的确保吞吐量，并且该运输协议能够确保可用吞吐量总是至少为r比特/秒（一般情况下，吞吐量会随时间波动）
+- 定时
+- 安全性
+
