--- a/_posts/2021-1-15-计算机网络.md
+++ b/_posts/2021-1-15-计算机网络.md
@@ -33,8 +33,43 @@ author:
 
 #### 1.3应用程序服务要求（对运输层协议）
 
-- 可靠的数据传输：当一个运输层协议提供这种服务时，发送进程只要将数据传送进套接字，就可以完全相信该数据能够无差错的到达接收进程。
-- 吞吐量：发送进程能够向接收进程交付比特的速率，当一个运输层协议提供这种服务时，，应用程序能够请求r比特/秒的确保吞吐量，并且该运输协议能够确保可用吞吐量总是至少为r比特/秒（一般情况下，吞吐量会随时间波动）
-- 定时
-- 安全性
+- 可靠的数据传输(丢包)：当一个运输层协议提供这种服务时，发送进程只要将数据传送进套接字，就可以完全相信该数据能够无差错的到达接收进程。
+- 吞吐量(速率)：发送进程能够向接收进程交付比特的速率，当一个运输层协议提供这种服务时，，应用程序能够请求r比特/秒的确保吞吐量，并且该运输协议能够确保可用吞吐量总是至少为r比特/秒（一般情况下，吞吐量会随时间波动）
+- 定时(时延)： 提供这种服务，可使发送方注入进套接字中的每个比特到达接收方的套接字不迟于一个固定的数值，这种服务对交互式实时应用程序具有吸引力。
+- 安全性(安全)： 加密由发送进程传输的所有数据，以防该数据以某种方式在这两个进程之间被观察到。
+
+
+
+#### 1.4 因特网提供的运输服务
+
+ 因特网为应用程序提供两个运输层协议：TCP和UDP
+
+- TCP服务：提供面向连接的服务和可靠的数据传送服务，TCP还具有拥塞控制机制（当发送方和接收方之间的网络出现拥塞时，TCP的拥塞控制机制会抑制发送进程)。TCP和UDP都没有提供任何加密机制，但是现在有TCP的加强版本称为安全套接字（SSL），如果一个应用程序想用SSL服务，他需要在该应用程序的客服端和服务器端包括SSL代码。
+- UDP服务：UDP通信前没有握手过程，UDP提供的是一种不可靠数据传送服务，并不保证报文将到达接收进程，而且到达接受进程的报文也可能是乱序到达的。UDP没有拥塞控制机制，所以UDP的发送端可以用它选定的任何速率向其下层（网络层）注入数据。
+- 今天的因特网通常能为时间敏感应用提供满意的服务，但它不能提供任何定时或带宽的保证。
+
+#### 1.5 HTTP和Web
+
+web的应用层协议是HTTP（HyperText Transfer Protocol）,它是web的核心。HTTP定义了报文的结构以及客户和服务器进行报文交换的方式。Web服务器实现了HTTP的服务器端，用于存储Web对象，每个对象由URL寻址。
+
+- HTTP使用TCP作为它的支撑运输协议。HTTP客户首先发起一个与服务器的TCP连接，连接建立后，客户向它的套接字接口发送HTTP请求报文并从它的套接字接口接收HTTP响应报文，服务器从它的套接字接口接收HTTP报文，并向它的套接字接口发送报文。
+- HTTP协议不用担心数据丢失，也不关心TCP实现可靠数据传输的细节，这就是分层体系结构最大的优点。
+- HTTP服务器并不保存关于客户的任何信息，所以HTTP是一个无状态协议
+
+#### 1.6 非持续连接/持续连接的HTTP
+
+服务器向客户传送一个web页面（1个HTML文件和10个JPEG图形）的步骤
+
+- 非持续连接的HTTP：
+  - HTTP客户进程在端口号80发起一个到服务器的TCP连接，在客户和服务器上分别有一个套接字与该连接相关联。
+  - HTTP客户经它的套接字向服务器发送一个HTTP请求报文。
+  - HTTP服务器进程经它的套接字接收该请求报文，从其存储器中检索出对象，在一个响应报文中封装对象，并通过套接字向客户发送响应报文。
+  - HTTP服务器进程通知TCP断开该TCP连接（但是直到TCP确定客户已接收到响应报文时，它才会断开）
+  - HTTP客户接收响应报文，TCP连接关闭，该报文指出封装对象是一个HTML文件，客户从响应报文中提取出该文件，检查HTML文件，得到对10个JPEG图形的引用。
+  - 对每个JPEG的引用重复前四个步骤
+- 持续连接的HTTP服务器在发送响应后保持该TCP连接打开，在相同的客户和服务器之间，后续的请求和响应报文能够通过相同的连接进行传送。一个完整的web页面可以用单个持续的连接进行传送，甚至位于同一台服务器的多个web页面在从该服务器发送给同一个客户时，也可在单个持续TCP连接上进行。
+
+估算从客户请求HTML文件到该用户收到整个文件的时间：RTT（分组传播时延、分组在中间路由器和交换机上的排队时延、分组处理时延）    当用户点击一个超链接时：浏览器在它和服务器之间发起一个TCP连接（包含三次握手）的过程，即客户向服务器发送一个小TCP报文段，服务器用一个小TCP报文段做出确认和响应，最后客户向服务器返回确认。三次握手的前两次占用一个RTT，客户结合三次握手的第三部分（确认）向该TCP连接发送一个HTTP请求报文，一旦到达服务器，服务器就在该TCP连接上发送HTML文件。HTTP请求和响应用去另一个RTT，因此，总的响应时间粗略为两个RTT加上服务器传输HTML文件的时间。
+
+#### 1.7 HTTP报文格式
 
