--- a/_posts/2020-11-2-DCS界面.md
+++ b/_posts/2020-11-2-DCS界面.md
@@ -15,6 +15,8 @@ title: DCS界面
 
 ![image-20201202153705164](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201202153712.png)
 
+FTE(Fault Tolerant Ethernet)：容错以太网是Experion PKS的控制网络
+
 一：class OptClc
 
 1.整理出优化配方以及计算优化所得各属性的计算值
