--- a/_posts/2021-1-15-计算机网络.md
+++ b/_posts/2021-1-15-计算机网络.md
@@ -73,3 +73,37 @@ web的应用层协议是HTTP（HyperText Transfer Protocol）,它是web的核心
 
 #### 1.7 HTTP报文格式
 
+##### 1.7.1 HTTP请求报文
+
+HTTP的第一行叫做请求行，其后继的行叫做首部行。请求行有三个字段：方法字段、URL字段和HTTP版本字段。方法字段的五种不同值：GET、POST、HEAD、PUT、和DELETE。
+
+通常HTTP请求报文使用GET方法；用户提交表单时，HTTP客户通常用POST方法；当服务器收到一个使用HEAD的请求时，将会用一个HTTP报文进行响应，但是并不返回对象；PUT方法常用web发行工具联合使用，它允许用户上传对象到指定的web服务器的指定的路径；DELETE方法允许用户或者应用程序删除web服务器上的对象。
+
+##### 1.7.2 HTTP响应报文
+
+```http
+HTTP/1.1 200 OK //初始状态行  6个首部行
+
+Connection: close //发送完成后将关闭TCP连接
+
+Date: TUE, 18 Aug 2015 15:44:04 GMT //服务器从它的文件系统中检索到该对象，将该对象插入响应报文，并发送响应报文的时间
+
+Server: Apache/2.2.3(CentOS) //指示该报文由一台Apache Web服务器产生的
+
+Last-Modified: Tue, 18 Aug 2015 15:11:03 GMT //指示对象创建或者最后修改的时间
+
+Content—Length: 6821 //指示了被发送对象中的字节数
+
+Content—Type: text/html //指示实体体中的对象是HTML文本
+
+(data   data  data  data  data  data……)//实体体
+```
+
+
+
+#### 1.8 用户与服务器的交互：cookie
+
+- cookie的作用：它使站点实现对用户的跟踪
+- cookie技术的四个组件：1 and 2：HTTP请求报文和HTTP响应报文中的cookie首部行；③用户端系统中的cookie文件，由用户的浏览器管理；④位于web站点的一个后端数据库
+
+例子：
