--- a/_posts/2020-11-2-导师任务.md
+++ b/_posts/2020-11-2-导师任务.md
@@ -42,3 +42,6 @@ C#中的每一个类型都代表一种资源，而资源又分为两类：
 看门狗用于监视、管理单bai片机、dsp等ducpu的复位电路。cpu正常运行时，每隔一定时间给dao看门狗一个脉冲信号，俗称“喂狗”，看门狗超过时间没有收到“喂狗”信号，输出一个脉冲给cpu的复位引脚，使cpu复位。
 
 
+
+## 1.DCS组态各模块功能
+
