--- a/_posts/2021-1-15-计算机网络.md
+++ b/_posts/2021-1-15-计算机网络.md
@@ -106,4 +106,27 @@ Content—Type: text/html //指示实体体中的对象是HTML文本
 - cookie的作用：它使站点实现对用户的跟踪
 - cookie技术的四个组件：1 and 2：HTTP请求报文和HTTP响应报文中的cookie首部行；③用户端系统中的cookie文件，由用户的浏览器管理；④位于web站点的一个后端数据库
 
-例子：
+例子：当你首次逛淘宝时，，web站点将产生一个唯一的识别码，并以此作为索引在它的后端数据库中产生一个表项。接下来淘宝服务器用一个包含Set–cookie：首部的HTTP响应报文（例如： Set–cookie:1678）对你的浏览器响应。当你的浏览器接收到HTTP响应报文，该浏览器在其管理的特定文件中添加一行，该行包含服务器的主机名和在Set–cookie首部的唯一识别码。当你继续逛淘宝时，每请求一个web页面，其浏览器就会查询cookie文件并抽取网站的识别码，并放到HTTP请求报文中包含识别码的cookie首部行中。淘宝使用cookie来提供它的购物车服务，淘宝能够维护你希望购买的物品列表。
+
+#### 1.9 web缓存
+
+web缓存器也叫代理服务器，能够代表初始web服务器来满足HTTP请求的网络实体，它拥有自己的磁盘存储空间，并且保存最近请求过的对象副本。可以配置浏览器，使用户的所有HTTP请求首先指向web缓存器，一旦配置，每个对某个对象的浏览器请求首先被定向到该缓存器。
+
+例如：
+
+- 浏览器创建一个到web缓存器的TCP连接，并向web缓存器中的对象发送一个HTTP请求。
+
+- web缓存器检查是否有该对象副本，如果有，则向客户浏览器用HTTP响应报文返回该请求对象。
+
+- 如果没有，则它打开与初始服务器的TCP连接，web缓存器在这个TCP连接上发送HTTP请求报文，初始服务器收到请求    后，向缓存器发送包含该对象的响应报文。
+
+- 当web缓存器接收到该对象时，它在本地存储空间存储一份副本，并向客户的浏览器发送包含请求对象的HTTP响应报文。
+
+​    web缓存器既是服务器（对浏览器而言）又是客户（对初始服务器而言）
+
+作用：web缓存器可以大大减少对客户请求的响应时间，特别是当客户与初始服务器之间的带宽远低于客户与缓存器之间的带宽时（原因在于缓存器可以满足客户的20%-70%的请求，且它们之间的速率为局域网速率）
+
+问题一：放在缓存器中的对象副本如何确定是最新的？
+
+   条件GET方法：缓存器向服务器发送条件GET报文，告诉服务器，仅当自指定日期之后该对象被修改过，才发送该对象
+
