--- a/_posts/2021-1-15-计算机网络.md
+++ b/_posts/2021-1-15-计算机网络.md
@@ -65,7 +65,7 @@ web的应用层协议是HTTP（HyperText Transfer Protocol）,它是web的核心
   - 对每个JPEG的引用重复前四个步骤
 - 持续连接的HTTP服务器在发送响应后保持该TCP连接打开，在相同的客户和服务器之间，后续的请求和响应报文能够通过相同的连接进行传送。一个完整的web页面可以用单个持续的连接进行传送，甚至位于同一台服务器的多个web页面在从该服务器发送给同一个客户时，也可在单个持续TCP连接上进行。
 
-估算从客户请求HTML文件到该用户收到整个文件的时间：RTT（分组传播时延、分组在中间路由器和交换机上的排队时延、分组处理时延）    当用户点击一个超链接时：浏览器在它和服务器之间发起一个TCP连接（包含三次握手）的过程，即客户向服务器发送一个小TCP报文段，服务器用一个小TCP报文段做出确认和响应，最后客户向服务器返回确认。三次握手的前两次占用一个RTT，客户结合三次握手的第三部分（确认）向该TCP连接发送一个HTTP请求报文，一旦到达服务器，服务器就在该TCP连接上发送HTML文件。HTTP请求和响应用去另一个RTT，因此，总的响应时间粗略为两个RTT加上服务器传输HTML文件的时间。
+估算从客户请求HTML文件到该用户收到整个文件的时间：RTT（分组传播时延、分组在中间路由器和交换机上的排队时延、分组处理时延）    当用户点击一个超链接时：浏览器在它和服务器之间发起一个TCP连接（包含三次握手）的过程，即客户向服务器发送一个小TCP报文段，服务器用一个小TCP报文段做出确认和响应，最后客户向服务器返回确认。三次握手的前两次占用一个RTT，客户结合三次握手的第三部分（确认）向该TCP连接发送一个HTTP请求报文，一旦到达服务器，服务器就在该TCP连接上发送HTML文件。HTTP请求和响应用去另一个RTT，因此，**总的响应时间粗略为两个RTT加上服务器传输HTML文件的时间**。
 
 #### 1.7 HTTP报文格式
 
