--- a/_posts/2020-11-2-DCS界面.md
+++ b/_posts/2020-11-2-DCS界面.md
@@ -158,11 +158,27 @@ if (!blLegalNumber) //表示优化计算是否成功的布尔量
 
 
 
+### 1.汽油调合优化控制系统
 
+#### 1.1 汽油调合优化控制系统的组成
 
+- DCS 
 
+- 现场仪表
+- 调和优化软件
+- 在线NIR分析仪
 
+调和优化控制由两台计算机组成，1台为优化服务器，运行优化控制程序；一台为操作站，作为优化指标修改和维护。
 
+优化算法软件通过DCS提供的OPC接口进行过程状态数据的读取，通过最优化计算得出优化指标下的各个组分油的流量设定值，由DCS的流量控制进行优化。
+
+#### 1.2 常规调合控制
+
+常规调合控制是调和优化的底层控制，在调合优化软件未投用时，DCS根据操作员输入的调和经验配方进行流量和压力PID自动控制；调和优化软件投用后，DCS接受来自优化程序的流量给定值设定进行控制，使各组分油按照配方比例进行调和。
+
+#### 1.3 调合优化控制
+
+优化软件根据调合的初始配方，通过OPC实时采集NIR分析仪分析各汽油的性质，累积流量等过程参数以及各组分油使用的上下限数据，罐底存油等进行实时优化，并把优化计算的流量结果作为给定值送给DCS进行流量闭环控制。
 
 
 
