--- a/_posts/2020-11-2-DCS界面.md
+++ b/_posts/2020-11-2-DCS界面.md
@@ -182,3 +182,26 @@ if (!blLegalNumber) //表示优化计算是否成功的布尔量
 
 
 
+## 2. 油品调合组分
+
+- 催化裂化汽油：
+
+![image-20210404143407651](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210404143414.png)
+
+- 重整汽油：
+
+![image-20210404143555864](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210404143556.png)
+
+- 烷基化油
+
+![image-20210404143739884](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210404143740.png)
+
+- MTBE
+
+![image-20210404143943787](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210404143943.png)
+
+#### 2.1 一些概念
+
+储罐油：带中间缓冲罐或储罐的组分油 
+
+直调油：从上游装置经过管道之后直接进入静态混合器的组分油。直接参与调合的直调油流量不可控 , 而只能通过调节其余具有储罐或中间缓冲罐的组分油的流量来匹配直调油的流量的调合系统。
