--- a/_posts/2020-11-1-Java基础.md
+++ b/_posts/2020-11-1-Java基础.md
@@ -417,3 +417,119 @@ b=100//引用类型的数组a改变后影响b数组里的值，b是a的别名
 Process finished with exit code 0
 ```
 
+### 4.Comparator接口
+
+Comparator接口内部只有1个要重写的方法：int CompareTo(),通过定义重写这个方法，可以自定义排序的依据。例如，现在我们要按字符串长度的大小递增的顺序进行排序，而不是按照字典顺序进行排序。
+
+作为接口Comparator提供了两个抽象方法，如下：
+
+|   int   | [compare](https://www.cnblogs.com/lin-jing/p/8279205.html#compare(T, T))(T o1, T o2) 比较用来排序的两个参数。 |
+| :-----: | :----------------------------------------------------------: |
+| boolean | [equals](https://www.cnblogs.com/lin-jing/p/8279205.html#equals(java.lang.Object))(Object obj) 指示某个其他对象是否“等于”此 Comparator。 |
+
+Compare（）比较用来排序的两个参数。根据第一个参数小于、等于或大于第二个参数分别返回负整数、零或正整数。
+
+对Comparetor.compare(o1, o2)方法的返回值，如果返回的值小于零，则不交换两个o1和o2的位置；如果返回的值大于零，则交换o1和o2的位置。
+
+```java
+package edu.princeton.cs.algs4;
+import java.util.Comparator;
+import java.util.Arrays;
+
+
+
+    class ComparatorDemo implements Comparator<String>{
+        @Override
+        public int compare(String o1, String o2) {
+            return o1.length()-o2.length();
+        }
+
+    }
+
+         class Test {
+    public static void main(String[] args) {
+        String[] res={"qwe","asd","dsaax","cfsser","za"};
+        Arrays.sort(res,new ComparatorDemo());
+        System.out.println(Arrays.toString(res));
+    }
+
+}
+
+result:
+[za, qwe, asd, dsaax, cfsser]
+
+Process finished with exit code 0
+```
+
+Leetcode：最大数
+
+给定一组非负整数 `nums`，重新排列每个数的顺序（每个数不可拆分）使之组成一个最大的整数
+
+```java
+class Solution {
+
+  public String largestNumber(int[] nums) {
+
+   int n=nums.length;
+
+   Integer[] res=new Integer[n];//这题我们自定义Comparetor的CompareTo方法
+
+   for(int i=0;i<nums.length;i++)
+
+   {
+
+     res[i]=nums[i];
+
+   }
+
+   Arrays.sort(res,(o1,o2)->{
+
+     long cur1=10,cur2=10;
+
+   while(cur1<=o1) 
+
+   {
+
+     cur1 *= 10;
+
+     }
+
+   while(cur2<=o2) {
+
+     cur2 *=10;
+
+     }
+
+   return (int)(-o1*cur2-o2+o2*cur1+o1);
+
+   }
+
+   );
+
+   if(res[0]==0) return "0";//处理特殊情况
+
+   StringBuilder ret = new StringBuilder();
+
+   for(int a:res)
+
+     {
+
+       ret.append(a);
+
+     }
+
+   return ret.toString();
+
+  }
+
+}
+```
+
+StringBuilder类的特点:
+
+- 是一个字符串缓冲器，可以理解为一个容器。
+- 长度是可变的，任意类型都可以。注意：是将任何数据都转换成字符串进行存储。
+- 3、容器对象提供很多对容器中的数据操作的功能，比如添加，删除，修改，查询。
+- 4、所有数据最终都会变为一个字符串
+- 和数组最大的不同就是数组存储完可以单独操作每一个元素，每一个元素都是独立的。
+- 字符串缓冲区，所有存储的元素都会被转成字符串，而且变成一个
