--- a/_posts/2020-11-1-Java基础.md
+++ b/_posts/2020-11-1-Java基础.md
@@ -529,7 +529,7 @@ StringBuilder类的特点:
 
 - 是一个字符串缓冲器，可以理解为一个容器。
 - 长度是可变的，任意类型都可以。注意：是将任何数据都转换成字符串进行存储。
-- 3、容器对象提供很多对容器中的数据操作的功能，比如添加，删除，修改，查询。
-- 4、所有数据最终都会变为一个字符串
+- 容器对象提供很多对容器中的数据操作的功能，比如添加，删除，修改，查询。
+- 所有数据最终都会变为一个字符串
 - 和数组最大的不同就是数组存储完可以单独操作每一个元素，每一个元素都是独立的。
 - 字符串缓冲区，所有存储的元素都会被转成字符串，而且变成一个
